refactor the region lookup