@@ -8,6 +8,7 @@ import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LinearRing;
 import org.locationtech.jts.geom.Polygon;
+import org.openlca.commons.Res;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -17,62 +18,83 @@ import com.greendelta.bioheating.model.Project;
 
 public class ClimateRegionLookup {
 
-	private static final String RESOURCE = "climate-region-data.geojson";
-	private static final GeometryFactory geometryFactory = new GeometryFactory();
-	private static List<RegionArea> cachedAreas;
+	private final GeometryFactory factory = new GeometryFactory();
 
-	public ClimateRegion lookup(Database db, Project project) {
-		if (db == null || project == null || project.map() == null || project.map().buildings().isEmpty()) {
-			return null;
-		}
-		var building = project.map().buildings().getFirst();
-		var coords = building.coordinates();
-		if (coords == null || coords.length == 0) return null;
-
-		double sumX = 0, sumY = 0;
-		for (var pt : coords) {
-			sumX += pt.x;
-			sumY += pt.y;
-		}
-		var centroid = new Coordinate(sumX / coords.length, sumY / coords.length);
-
-		var crs = project.map().crs();
-		var wgs84 = centroid;
-		if (crs != null && !crs.equalsIgnoreCase("EPSG:4326")) {
-			var trans = CoordinateTransformer.toWgs84From(crs).orElse(null);
-			if (trans != null) {
-				var p = trans.project(centroid.x, centroid.y).orElse(null);
-				if (p != null) {
-					wgs84 = new Coordinate(p.x, p.y);
-				}
-			}
-		}
-
-		int number = lookup(wgs84);
-		if (number == -1) return null;
-
-		for (var region : db.getAll(ClimateRegion.class)) {
-			if (region.number() == number) {
-				project.climateRegion(region);
-				return region;
-			}
-		}
-		return null;
+	private ClimateRegionLookup() {
 	}
 
-	public int lookup(Coordinate coordinate) {
-		if (coordinate == null) return -1;
-		var areas = loadRegionAreas();
-		var point = geometryFactory.createPoint(coordinate);
+	public static Res<ClimateRegion> lookup(Database db, Project project) {
+		if (db == null)
+			return Res.error("No database provided");
+		if (project == null
+			|| project.map() == null
+			|| project.map().crs() == null
+			|| project.map().buildings().isEmpty()) {
+			return Res.error("Project has no valid building data");
+		}
 
-		// 1. Check intersection
+		// find the first best coordinate
+		Coordinate cx = null;
+		for (var b : project.map().buildings()) {
+			var cs = b.coordinates();
+			if (cs != null && cs.length > 0) {
+				cx = cs[0];
+				break;
+			}
+		}
+		if (cx == null)
+			return Res.error("No building with coordinates found in project");
+
+		// project the coordinate to WGS 84
+		var crs = project.map().crs();
+		var trans = CoordinateTransformer.toWgs84From(crs);
+		if (trans.isError()) {
+			return trans.wrapError("Failed to get WGS 84 transformer for CRS: " + crs);
+		}
+		var projected = trans.value().project(cx.x, cx.y);
+		if (projected.isError()) {
+			return projected.wrapError("Failed to project coordinate for CRS: " + crs);
+		}
+
+		// lookup the region code
+		var lookupPoint = new Coordinate(
+			projected.value().x, projected.value().y);
+		int number = lookup(lookupPoint);
+		if (number == -1)
+			return Res.error("Lookup failed for point: " + lookupPoint);
+
+		// find the region for the code
+		for (var region : db.getAll(ClimateRegion.class)) {
+			if (region.number() == number)
+				return Res.ok(region);
+		}
+		return Res.error("No region found with region code: " + number);
+	}
+
+	public static int lookup(Coordinate cx) {
+		if (cx == null) return -1;
+		try {
+			return new ClimateRegionLookup().of(cx);
+		} catch (Exception ignore) {
+			return -1;
+		}
+	}
+
+	private int of(Coordinate cx) {
+		var areas = loadAreas();
+		if (areas.isEmpty())
+			return -1;
+
+		var point = factory.createPoint(cx);
+
+		// check intersection
 		for (var area : areas) {
 			if (area.geometry.covers(point)) {
 				return area.number;
 			}
 		}
 
-		// 2. Fallback to nearest
+		// fallback to nearest
 		double minDist = Double.MAX_VALUE;
 		int bestRegion = -1;
 		for (var area : areas) {
@@ -85,67 +107,77 @@ public class ClimateRegionLookup {
 		return bestRegion;
 	}
 
-	private static synchronized List<RegionArea> loadRegionAreas() {
-		if (cachedAreas != null) return cachedAreas;
-		cachedAreas = new ArrayList<>();
-		try (var stream = ClimateRegionLookup.class.getResourceAsStream(RESOURCE)) {
-			if (stream != null) {
-				var features = new ObjectMapper().readTree(stream).path("features");
-				for (var feature : features) {
-					int number = feature.path("properties").path("climate_region").asInt(-1);
-					var geom = parseGeometry(feature.path("geometry"));
-					if (number != -1 && geom != null) {
-						cachedAreas.add(new RegionArea(number, geom));
-					}
+	private List<RegionArea> loadAreas() {
+		var stream = getClass().getResourceAsStream("climate-region-data.geojson");
+		if (stream == null)
+			return List.of();
+
+		try (stream) {
+			var features = new ObjectMapper().readTree(stream).path("features");
+			var areas = new ArrayList<RegionArea>();
+			for (var f : features) {
+				int number = f.path("properties")
+					.path("climate_region")
+					.asInt(-1);
+				var geometry = geometryOf(f.path("geometry"));
+				if (number != -1 && geometry != null) {
+					areas.add(new RegionArea(number, geometry));
 				}
 			}
+			return areas;
 		} catch (Exception ignored) {
+			return List.of();
 		}
-		return cachedAreas;
 	}
 
-	private static Geometry parseGeometry(JsonNode node) {
-		if (node == null || node.isMissingNode()) return null;
-		String type = node.path("type").asText();
+	private Geometry geometryOf(JsonNode node) {
+		if (node == null || node.isMissingNode())
+			return null;
+		var type = node.path("type").asText();
 		var coords = node.path("coordinates");
 		if ("Polygon".equals(type)) {
-			return parsePolygon(coords);
+			return polygonOf(coords);
 		} else if ("MultiPolygon".equals(type)) {
 			var polys = new ArrayList<Polygon>();
 			for (var polyCoords : coords) {
-				var p = parsePolygon(polyCoords);
-				if (p != null) polys.add(p);
+				var p = polygonOf(polyCoords);
+				if (p != null) {
+					polys.add(p);
+				}
 			}
-			return geometryFactory.createMultiPolygon(polys.toArray(new Polygon[0]));
+			return factory.createMultiPolygon(polys.toArray(new Polygon[0]));
 		}
 		return null;
 	}
 
-	private static Polygon parsePolygon(JsonNode coords) {
-		if (coords.isEmpty()) return null;
-		var shell = parseRing(coords.get(0));
-		if (shell == null) return null;
-		var holes = new ArrayList<LinearRing>();
-		for (int i = 1; i < coords.size(); i++) {
-			var hole = parseRing(coords.get(i));
-			if (hole != null) holes.add(hole);
-		}
-		return geometryFactory.createPolygon(shell, holes.toArray(new LinearRing[0]));
+	private Polygon polygonOf(JsonNode coords) {
+		if (coords.isEmpty())
+			return null;
+		var shell = ringOf(coords.get(0));
+		// we can ignore holes for climate regions
+		return shell != null
+			? factory.createPolygon(shell)
+			: null;
 	}
 
-	private static LinearRing parseRing(JsonNode coords) {
+	private LinearRing ringOf(JsonNode coords) {
 		var pts = new ArrayList<Coordinate>();
 		for (var node : coords) {
-			pts.add(new Coordinate(node.get(0).asDouble(), node.get(1).asDouble()));
+			double x = node.get(0).asDouble();
+			double y = node.get(1).asDouble();
+			pts.add(new Coordinate(x, y));
 		}
-		if (pts.size() < 3) return null;
-		var first = pts.get(0);
-		var last = pts.get(pts.size() - 1);
+		if (pts.size() < 3)
+			return null;
+
+		// make sure the ring is closed
+		var first = pts.getFirst();
+		var last = pts.getLast();
 		if (first.x != last.x || first.y != last.y) {
 			pts.add(new Coordinate(first.x, first.y));
 		}
-		return geometryFactory.createLinearRing(pts.toArray(new Coordinate[0]));
+		return factory.createLinearRing(pts.toArray(new Coordinate[0]));
 	}
 
-	private static record RegionArea(int number, Geometry geometry) {}
+	private record RegionArea(int number, Geometry geometry) {}
 }
